--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ html {
     background: rgb(255, 0, 170);
 }
 
-#pinkred {
+#pinkRed {
     background: rgb(255, 0, 76);
 }
 
@@ -153,4 +153,3 @@ html {
 #black {
     background: rgb(0, 0, 0);
 }
-
